--- a/MCERemote/MCERemote.vbproj
+++ b/MCERemote/MCERemote.vbproj
@@ -78,6 +78,12 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmKeyboard.Designer.vb">
+      <DependentUpon>frmKeyboard.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmKeyboard.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="frmMCERemote.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -85,6 +91,7 @@
       <DependentUpon>frmMCERemote.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Module1.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -102,6 +109,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="frmKeyboard.resx">
+      <DependentUpon>frmKeyboard.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmMCERemote.resx">
       <DependentUpon>frmMCERemote.vb</DependentUpon>
     </EmbeddedResource>
